# deserto_project

./: .gitignore  default.conf  docker-compose.yaml
WebInterface/: pyproject.toml  requirements.txt  run.py
WebInterface/alembic/: env.py
WebInterface/alembic/versions/: 4575b0c0fb58_.py  8c817fa7c62a_.py  af208f7cb166_.py  d6736aee55fe_.py
WebInterface/app/: __init__.py  config.py  forms.py  models.py  routes.py
WebInterface/app/templates/: _person.html  _queue.html  _secret.html  _task.html  add_acc.html  admin.html  base.html  index.html  info.html  secret.html
deserto/: .flake8  Dockerfile  alembic.ini  config.toml  pyproject.toml
deserto/alembic/: env.py
deserto/alembic/versions/: 13b88aae4884_.py  18df191fbe08_.py
deserto/deserto/: __init__.py  config.py  data_base.py  logger.py  mail_tools.py  manage.py  models.py  resource_tools.py  web_browser.py
deserto/deserto/dribbble/: __init__.py  scripts.py  tools.py  web_scripts.py
deserto/deserto/scripts/: dribbble_like.py  dribbble_reg.py
