[tool.poetry]
name = "deserto"
version = "0.2.0"
description = "web bot for designers"
authors = ["vcslav-v <vcslav.v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Faker = "^4.1.3"
selenium = "^3.141.0"
SQLAlchemy = "^1.3.19"
requests = "^2.24.0"
psycopg2-binary = "^2.8.6"
bs4 = "^0.0.1"
toml = "^0.10.1"
alembic = "^1.4.3"

[tool.poetry.scripts]
deserto = "deserto.manage:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
